--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Monte seu personagem</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <h1 style="padding-left:30%; padding-bottom:5%">Monte seu personagem</h1>
-    <div class="conatiner">
+    <h1 style="padding-left:30%; padding-bottom:3%; padding-top: 5%; color: blanchedalmond">Monte seu personagem</h1>
+    <div class="container">
         <div class="row">
-            <div class="col">
-
+            <div class="col-2">
+            
             </div>
             <div class="col-8">
             <form>
@@ -39,41 +41,61 @@
                             <input type="text" class="form-control" id="estado_origem" placeholder="Estado de origem">
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                        <label>
-                                    <input type="radio" name="test" value="small" checked>
-                                    <img src="../assests/blue.png">
-                        </label>
-                        <label>
-                                <input type="radio" name="test" value="small" checked>
-                                <img src="../assests/blue.png">
-                        </label>
-                        <label>
-                            <input type="radio" name="test" value="small" checked>
-                            <img src="../assests/blue.png">
-                        </label>
-                
-<!--                         
-                        <button data-toggle="button" id=""><img src="../assests/green.png"></button>                            
-                            <button id=""><img src="../assests/gray.png"></button>                            
-                            <button id=""><img src="../assests/red.png"></button>                             -->
                         
-                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                
+                <div class="row" id="player" >
+                        <label class="btn">
+                            <input type="radio" name="options" value="blue" id="blue_id" checked>
+                            <img src="../static/blue.png">
+                        </label>
+                        <label class="btn">
+                            <input type="radio" name="options" value="red" id="red_id">
+                            <img src="../static/red.png">
+                        </label>
+                        <label class="btn">
+                            <input type="radio" name="options" value="green" id="green_id">
+                            <img src="../static/green.png">
+                        </label>
+                        <label class="btn">
+                            <input type="radio" name="options" value="gray" id="gray_id">
+                            <img src="../static/gray.png">
+                        </label>           
+                    
+                </div>
+                <div style="padding-top: 20px">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+                </form>
+                
             </div>
-            <div class="col">
-
-            </div>
+            
         </div>    
     </div>
 
-    
+    <script>
+        $("#player label" ).on( "click", function() {
+            if($( "input:checked" ).val() === "blue"){
+                $("body").css("background-image", "url('../static/backazul.png')"); 
+                $("body").css("background-size", "cover");    
+            }
+            if($( "input:checked" ).val() === "red"){
+                $("body").css("background-image", "url('../static/backvermelho.png')");
+                $("body").css("background-size", "cover");    
+            }            
+            if($( "input:checked" ).val() === "green"){
+                $("body").css("background-image", "url('../static/backverde.png')");    
+                $("body").css("background-size", "cover");
+            }            
+            if($( "input:checked" ).val() === "gray"){
+                $("body").css("background-image", "url('../static/backcinza.png')");
+                $("body").css("background-size", "cover");    
+            }
+        });
+    </script>
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
