--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Monte seu personagem</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="../static/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 </head>
 
@@ -17,28 +17,28 @@
             
             </div>
             <div class="col-8">
-            <form>
+            <form action="{{ url_for('personagem') }}" method="POST">
                 <div class="form-row">
                     <div class="col-md-4 mb-3">
                         <div class="form-group">
                             <label for="nome">Nome</label>
-                            <input type="text" class="form-control" id="nome"placeholder="Nome">
+                            <input type="text" name="nome" class="form-control" id="nome" placeholder="Nome">
                         </div>
                         
                         <div class="form-group">
                             <label for="exampleInputPassword1">Idade</label>
-                            <input type="text" class="form-control" id="Idade" placeholder="Idade">
+                            <input type="text" name="idade" class="form-control" id="Idade" placeholder="Idade">
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="form-group">
                             <label for="Escolaridade">Escolaridade</label>
-                            <input type="text" class="form-control" id="Escolaridade" placeholder="Escolaridade">
+                            <input type="text" name="escolaridade" class="form-control" id="Escolaridade" placeholder="Escolaridade">
                         </div>
                         
                         <div class="form-group">
                             <label for="estado_origem">Estado de origem</label>
-                            <input type="text" class="form-control" id="estado_origem" placeholder="Estado de origem">
+                            <input type="text" name="estado" class="form-control" id="estado_origem" placeholder="Estado de origem">
                         </div>
                     </div>
                         
@@ -46,19 +46,19 @@
                 
                 <div class="row" id="player" >
                         <label class="btn">
-                            <input type="radio" name="options" value="blue" id="blue_id" checked>
+                            <input type="radio" name="personagem" value="blue" id="blue_id" checked>
                             <img src="../static/blue.png">
                         </label>
                         <label class="btn">
-                            <input type="radio" name="options" value="red" id="red_id">
+                            <input type="radio" name="personagem" value="red" id="red_id">
                             <img src="../static/red.png">
                         </label>
                         <label class="btn">
-                            <input type="radio" name="options" value="green" id="green_id">
+                            <input type="radio" name="personagem" value="green" id="green_id">
                             <img src="../static/green.png">
                         </label>
                         <label class="btn">
-                            <input type="radio" name="options" value="gray" id="gray_id">
+                            <input type="radio" name="personagem" value="gray" id="gray_id">
                             <img src="../static/gray.png">
                         </label>           
                     
@@ -66,7 +66,7 @@
                 <div style="padding-top: 20px">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
-                </form>
+            </form>
                 
             </div>
             
